privileged.yaml
#privileged.yaml
apiVersion: v1
kind: Pod
metadata:
 labels:
   app: nginx-privileged
 name: nginx-privileged-disallowed
spec:
 containers:
 - image: nginx
   name: nginx
   securityContext:
     privileged: true
